<resources>
    <string name="app_name">LocationTracker</string>
    <string name="error_in_getting_locatin_data">တည်နေရာဒေတာမရယူနိုင်ပါ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_home">မူလ</string>
    <string name="bottom_nav_history">မှတ်တမ်း</string>
    <string name="error_empty_locatin_data_list">No Location Data To Display</string>

    <string name="channel_name">Check Your Location</string>
    <string name="channel_id">CHECK_YOUR_LOCATION_1001</string>
    <string name="channel_description">channel for showing notification for foreground service</string>
    <string name="notification_channel_id">123456789</string>
    <string name="title_activity_maps">Map</string>
    <string name="version_number">ဗားရှင်း %s</string>
    <string name="txt_about_application">Application အကြောင်း</string>
    <string name="txt_about_app_content"><![CDATA[ဤ Application ကို COVID-19 ရောဂါကာကွယ်ရေးတွင် အထောက်အကူပြုနိုင်ရန် ရည်ရွယ်၍ ရန်ကုန်နည်းပညာတက္ကသိုလ် (McE & CEIT) Youth Engineer များမှ ဖန်တီးထားပါသည်။]]></string>
    <string name="title_txt_place_check_about">(၁) \'နေရာစစ်\' ​၏ အသုံးဝင်ပုံ</string>
    <string name="details_txt_place_check_about">ဤ Application သည် သင်တစ်လအတွင်း သွားခဲ့သော နေရာများအား သင်​၏ဖုန်းထဲတွင် အလိုအလျောက် သိမ်းဆည်းပေးမည်ဖြစ်ပါသည်။ လူတိုင်း ဤ Application ကို သွင်းထားခြင်းဖြင့် အကယ်၍ သင် (သို့မဟုတ်) တစ်စုံတစ်ယောက်သည် COVID-19 positive ဟု သံသယဖြစ်ခံရပါက လွန်ခဲ့သောတစ်လအတွင်း သွားခဲ့သောခရီးသွား ရာဇဝင်ကို သက်ဆိုင်ရာကျန်းမာရေးဝန်ထမ်းများမှ လွယ်ကူစွာ စစ်ဆေးကြည့်ရှုနိုင်မည်ဖြစ်သည်။ ထို့ပြင် ဤ Application ကို သွင်းထားသူများသည် COVID-19 positive လူနာသွားရောက်ခဲ့သည့် နေရာနှင့် အချိန် တူညီမှု ရှိ/မရှိ မိမိကိုယ်တိုင် တိုက်ဆိုင်စစ်ဆေးပြီး ထိုသူနှင့် တွေ့ဆုံမှု ရှိ/မရှိ အလွယ်တကူသိရှိနိုင်မည်ဖြစ်သည်။ မိမိတို့ ဖုန်းထဲတွင် Application စတင် သွင်းသည့်နေ့မှစ၍ တစ်လအတွင်း သွားခဲ့သော ခရီးသွားရာဇဝင်ကို csv ဖိုင်ဖြင့် ထုတ်၍ ကျန်းမာရေးစောင့်ရှောက်သူအား ကူညီနိုင်မည်ဖြစ်ပါသည်။</string>
    <string name="title_txt_symptom_check_about" >(၂) \'ရောဂါစစ်\' ​၏ အသုံးဝင်ပုံ</string>
    <string name="details_txt_symptom_check_about" >COVID-19 နှင့် ပတ်သက်၍ မြန်မာနိုင်ငံသူ/သားများ​၏ စိုးရိမ်ပူပန်မှုကို လျှော့ချနိုင်ရန်အတွက် မိမိတို့​၏ကျန်းမာရေးအခြေအနေများကို self-examination (ကိုယ်တိုင်စစ်ဆေးနိုင်ရန်) ရည်ရွယ်ဆောင်ရွက်ထားပါသည်။ ဤ application တွင်မေးမြန်းထားသည့် မေးခွန်းများအတွက် သတ်မှတ်ထားသည့် အဖြေများထဲမှ ရွေးချယ်ပေးခြင်းဖြင့် သင်ခံစားနေရသော ရောဂါလက္ခဏာများသည် (၁) ရိုးရိုးအအေးမိခြင်း၊ (၂) COVID-19 သံသယဖြစ်ဖွယ်ရာအချက်များတွေ့ရှိခြင်း၊ (၃) ကျန်းမာရေးအခြေအနေကောင်းမွန်ခြင်းနှင့် (၄) Home :house_with_garden: Isolation ပြုလုပ်သင့်ကြောင်း အကြံပြုခြင်းတို့ကို ခွဲခြားပေးမည်ဖြစ်ပါသည်။ # သင့်တွင်ဖော်ပြပါရောဂါလက္ခဏာများရှိနေပါက ကျန်းမာရေးဌာနသို့ အမြန်ဆုံးအကြောင်းကြားသင့်ပါသည်။ (၁) ပြင်းထန်စွာ အသက်ရှူရခက်ခဲခြင်း၊ (၂) ပြင်းထန်စွာ ရင်ဘတ်အောင့်ခြင်းနှင့် (၃) ပြင်းထန်စွာ ပင်ပန်းနွမ်းနယ်ခြင်း။ မှတ်ချက်။ ။ မိမိတွင်ပိုးရှိသော်လည်း ရောဂါလက္ခဏာမပြခြင်းရှိနိုင်သဖြင့် အခြားသူများသို့ မကူးစက်စေရန် အထူးသတိပြုသင့်ပါသည်။ </string>
    <string name="title_txt_contact_about" >(၃) \'ဆက်သွယ်ရန်\​\'​၏ အသုံးဝင်ပုံ</string>
    <string name="details_txt_contact_about" >သင် (သို့မဟုတ်) သင့်ပတ်ဝန်းကျင်တွင် COVID-19 သံသယဖြစ်ဖွယ်အချက်အလက်များ (သို့မဟုတ်) ပုဂ္ဂိုလ်များ တွေ့ရှိပါက မိမိတို့နေထိုင်ရာ မြို့ရွာအလိုက် သက်ဆိုင်ရာတာဝန်ရှိပုဂ္ဂိုလ်များနှင့် ဆက်သွယ်၍ COVID-19 ရောဂါအား အချိန်မီ မြန်ဆန်စွာ ကာကွယ်ဆောင်ရွက်နိုင်ရန်ရည်ရွယ်ဆောင်ရွက်ထားပါသည်။ မိမိတို့နေထိုင်ရာ တိုင်းဒေသကြီး (သို့မဟုတ်) ပြည်နယ်အလိုက် ဆက်သွယ်ရမည့် အဖွဲ့အစည်းများ၊ ပုဂ္ဂိုလ်များ​၏ အမည်၊ ဖုန်းနံပါတ်များ ဖော်ပြထား၍ တိုက်ရိုက်ဖုန်းခေါ်ဆိုနိုင်ရန် စီစဉ်ဆောင်ရွက်ထားပါသည်။ ရန်ကုန်နှင့် မန္တလေးရှိ အခမဲ့ ဖျားနာမှုကုသရေးဆေးခန်း (fever clinic)​များ​၏ ဖုန်းနံပါတ်များလည်း ထည့်သွင်းဖော်ပြထားပါသည်။</string>
</resources>
